# NEWS_DAPA

./: .env.example  .gitignore  README.md  news crawl.txt  pyproject.toml
.github/workflows/: dapa-morning-brief.yml
docs/: CRON_SETUP.md  PRD_DAPA_Telegram_News_Bot.md
scripts/: run_morning_brief.ps1  run_morning_brief.sh
src/dapa_morning_brief/: __init__.py  briefing.py  cli.py  collector.py  models.py  rss_parser.py  sources.py  telegram.py
tests/: test_briefing.py  test_collector.py  test_telegram.py
